--- a/views/dash.html
+++ b/views/dash.html
@@ -44,13 +44,14 @@
             </a>
           </div>
 
-          <div class="buttons has-addons navbar-brand" id="toggle" style="margin-top: 3.5%;margin-left: 54%;">
+          <div class="buttons has-addons navbar-brand" id="toggle" style="margin-top: 4%;margin-left: 54%;">
             <button class="button is-success " id="chartbtn" onclick="chartbtn()">Chart</button>
             <button class="button" id="ndvibtn" onclick="ndvibtn()">NDVI</button>
           </div>
         </nav>
-      </div>
 
+      </div>
+<hr style="background-color: #686666; height: 1px; margin-top: 0px; width: 60%; margin-left: 15%;">
       <div class="container" id="chartSec">
         <canvas id="myChart"></canvas>
 
