--- a/views/dash.html
+++ b/views/dash.html
@@ -31,7 +31,28 @@
 
 </head>
 
-<body>
+  
+  
+
+<body >
+  <div class="container" id="app">
+    <div id="image-modal" class="modal">
+      <div class="modal-background"></div>
+      <div class="modal-content">
+       <div class="modal-card">
+      <header class="modal-card-head " style="background-color: rgb(250, 89, 77);" >
+        <p class="modal-card-title"> <i class="fas fa-exclamation-triangle"></i> Minimum Screen Size hit</p>
+      </header>
+      <section class="modal-card-body" style="background-color: rgb(247, 149, 142);">
+        Hint: Switch to Larger Device <br> 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          or Rotate Screen 
+      </section>
+    </div>
+      </div>
+    </div>    
+  </div>
+  
   <div class="columns">
      <!-- column to the left -->
      <div class="column is-two-thirds" id="datacol">
