--- a/css/dash.css
+++ b/css/dash.css
@@ -124,3 +124,29 @@ div#colorbar-container canvas#colorbar {
 #ndviSec{
     display: none;
 }
+#overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+    cursor: pointer;
+  }
+  #image-modal{
+    display: none;
+    }
+@media only screen and (max-width: 600px) {
+    @media only screen and (orientation: portrait) {
+     #image-modal{
+         display: block;
+     }
+     .modal-card, .modal-content{
+        width: 90%;
+        top: 40%;
+     }
+  }
+}
