--- a/views/dash.html
+++ b/views/dash.html
@@ -41,7 +41,7 @@
       <div class="modal-content">
        <div class="modal-card">
       <header class="modal-card-head " style="background-color: rgb(250, 89, 77);" >
-        <p class="modal-card-title"> <i class="fas fa-exclamation-triangle"></i> Minimum Screen Size hit</p>
+        <p class="modal-card-title"> <i class="fas fa-exclamation-triangle"></i> Minimum Screen hit</p>
       </header>
       <section class="modal-card-body" style="background-color: rgb(247, 149, 142);">
         Hint: Switch to Larger Device <br> 
