--- a/views/dash.html
+++ b/views/dash.html
@@ -348,7 +348,7 @@
   <footer class="footer is-fixed-bottom">
     <div class="content has-text-centered">
       <p>
-        <strong>PreFarm</strong> by <a href="">George Turkson </a>and <a href=""> Kenneth Kumi</a>
+        <strong>PreFarm</strong> by <a href="">George Turkson </a>,<a href=""> Kenneth Kumi</a> and <a href="">Seidu Bertha</a>
         A final year project
       </p>
     </div>
