--- a/views/dash.html
+++ b/views/dash.html
@@ -288,9 +288,8 @@
         </div>
         <!-- end of usersettings -->
         <div class="box" id="notification">
-          <div class="notification is-primary">
+          <div class="notification is-primary" id="messageTemp">
             <button class="delete"></button>
-            Primar lorem ipsum dolor sit amet, consectetur
           </div>
 
           <div class="notification is-link">
