--- a/views/dash.html
+++ b/views/dash.html
@@ -203,7 +203,7 @@
         <a class="panel-block" id="notes" onclick="notification()">
           <span class="fa-layers fa-fw">
             <i class="fas fa-bell fa-2x" aria-hidden="true"></i>
-            <span class="fa-layers-counter fa-3x" style="background:Tomato">10</span>
+            <span class="fa-layers-counter fa-3x" id="notify" style="background:Tomato"></span>
           </span>
           &nbsp;&nbsp;Notifications
         </a>
@@ -292,19 +292,12 @@
             <button class="delete"></button>
           </div>
 
-          <div class="notification is-link">
+          <div class="notification is-link" id="messageMoisture">
             <button class="delete"></button>
-            Primar lorem ipsum dolor sit amet, consectetur
           </div>
 
-          <div class="notification is-info">
+          <div class="notification is-info" id="messageRain">
             <button class="delete"></button>
-            Primar lorem ipsum dolor sit amet, consectetur
-          </div>
-
-          <div class="notification is-success">
-            <button class="delete"></button>
-            Primar lorem ipsum dolor sit amet, consectetur
           </div>
 
 
