--- a/views/dash.html
+++ b/views/dash.html
@@ -203,7 +203,7 @@
         <a class="panel-block" id="notes" onclick="notification()">
           <span class="fa-layers fa-fw">
             <i class="fas fa-bell fa-2x" aria-hidden="true"></i>
-            <span class="fa-layers-counter fa-3x" id="notify" style="background:Tomato"></span>
+            <span class="fa-layers-counter fa-3x" style="background:Tomato">10</span>
           </span>
           &nbsp;&nbsp;Notifications
         </a>
@@ -288,16 +288,24 @@
         </div>
         <!-- end of usersettings -->
         <div class="box" id="notification">
-          <div class="notification is-primary" id="messageTemp">
+          <div class="notification is-primary">
             <button class="delete"></button>
+            Primar lorem ipsum dolor sit amet, consectetur
           </div>
 
-          <div class="notification is-link" id="messageMoisture">
+          <div class="notification is-link">
             <button class="delete"></button>
+            Primar lorem ipsum dolor sit amet, consectetur
           </div>
 
-          <div class="notification is-info" id="messageRain">
+          <div class="notification is-info">
             <button class="delete"></button>
+            Primar lorem ipsum dolor sit amet, consectetur
+          </div>
+
+          <div class="notification is-success">
+            <button class="delete"></button>
+            Primar lorem ipsum dolor sit amet, consectetur
           </div>
 
 
@@ -340,7 +348,7 @@
   <footer class="footer is-fixed-bottom">
     <div class="content has-text-centered">
       <p>
-        <strong>PreFarm</strong> by <a href="">George Turkson </a>,<a href=""> Kenneth Kumi</a> and <a href="">Seidu Bertha</a>
+        <strong>PreFarm</strong> by <a href="">George Turkson</a>,<a href=""> Kenneth Kumi</a> and <a href="">Seidu Bertha</a>
         A final year project
       </p>
     </div>
