--- a/css/dash.css
+++ b/css/dash.css
@@ -32,6 +32,10 @@ body,html{
     width: 40%;
     height: 40%;
 }
+#avgChart{
+    width: 40%;
+    height: 40%;
+}
 #datacol{
     margin-left: 1%;
 }
